# projects

./: README.md
any_class/: any.h  readme.md
compgraph/: README.md  setup.py
compgraph/compgraph/: algorithms.py  graph.py  operations.py
compgraph/compgraph.egg-info/: PKG-INFO  SOURCES.txt
compgraph/examples/: run_inverted_index.py  run_pmi_graph.py  run_word_count.py  run_yandex_maps_graph.py
compgraph/mt/: test_algorithms.py  test_operations.py
compgraph/ut/: test_graph.py
raytracer/: .tester.json  CMakeLists.txt  geometry.h  objects_class.h  parsing.h  raytracer.h  readme.md  shading.h  test.cpp
raytracer/tests/box/: CornellBox-Sphere.mtl
raytracer/tests/classic_box/: CornellBox-Original.mtl
raytracer/tests/distorted_box/: CornellBox-Original.mtl
raytracer/tests/mirrors/: materials.mtl
telegram-bot/: CMakeLists.txt  README.md
telegram-bot/telegram/: bot.h  client.cpp  main.cpp
telegram_bot/: README.md
telegram_bot/telegram/: bot.cpp  client.cpp  client.h  main.cpp
telegram_bot/test/: test_api.cpp
